--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-	<title>Magnetic - Stunning Responsive HTML5/CSS3 Photography Wensite Template</title>
+	<title>初音残颜OvO</title>
 	<meta charset="utf-8">
 	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="Magnetic is a stunning responsive HTML5/CSS3 photography/portfolio website template"/>
@@ -21,23 +21,13 @@
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="selected">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">The Team</a></li>
-				<li><a href="#">Journal</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="index.html" class="selected">主页</a></li>
+				<li><a href="#">关于</a></li>
+				<li><a href="#">我</a></li>
+				<li><a href="#">日志</a></li>
+				<li><a href="contact.html">联系我</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
-
-		<div class="footer clearfix">
-			<ul class="social clearfix">
-				<li><a href="#" class="fb" data-title="Facebook"></a></li>
-				<li><a href="#" class="google" data-title="Google +"></a></li>
-				<li><a href="#" class="behance" data-title="Behance"></a></li>
-				<!--<li><a href="#" class="twitter" data-title="Twitter"></a></li>
-				<li><a href="#" class="dribble" data-title="Dribble"></a></li>-->
-				<li><a href="#" class="rss" data-title="RSS"></a></li>
-			</ul><!-- end social -->
 
 			<div class="rights">
 				<p>Copyright © 2014 magnetic.</p>
