--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>初音残颜OvO</title>
 	<meta charset="utf-8">
-	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="Magnetic is a stunning responsive HTML5/CSS3 photography/portfolio website template"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -135,7 +134,7 @@
 				</div>
 			</a>
 		</div>
-	
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=2353872940&auto=1&height=90"></iframe>
 	
 </body>
 </html>
