--- a/inner.html
+++ b/inner.html
@@ -21,27 +21,18 @@
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">The Team</a></li>
-				<li><a href="#">Journal</a></li>
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="index.html">主页</a></li>
+				<li><a href="#">关于</a></li>
+				<li><a href="#">我</a></li>
+				<li><a href="#">日志</a></li>
+				<li><a href="contact.html">联系我</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
 
-		<div class="footer clearfix">
-			<ul class="social clearfix">
-				<li><a href="#" class="fb" data-title="Facebook"></a></li>
-				<li><a href="#" class="google" data-title="Google +"></a></li>
-				<li><a href="#" class="behance" data-title="Behance"></a></li>
-				<!--<li><a href="#" class="twitter" data-title="Twitter"></a></li>
-				<li><a href="#" class="dribble" data-title="Dribble"></a></li>-->
-				<li><a href="#" class="rss" data-title="RSS"></a></li>
-			</ul><!-- end social -->
 
 			<div class="rights">
 				<p>Copyright © 2014 magnetic.</p>
-				<p>Template by <a href="">Pixelhint.com</a></p>
+				<p>Template by <a href="">alanwalkman.sxl.cn.</a></p>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
