--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
 	<header>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&id=2353872940&auto=1&height=90"></iframe>
 		<div class="logo">
 			<a href="index.html"><img src="img/logo.png" title="Magnetic" alt="Magnetic"/></a>
 		</div><!-- end logo -->
@@ -30,7 +31,7 @@
 
 			<div class="rights">
 				<p>Copyright © 2014 magnetic.</p>
-				<p>Template by <a href="">Pixelhint.com</a></p>
+				<p>Template by <a href="">alanwalkman.sxl.cn</a></p>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
