--- a/index.html
+++ b/index.html
@@ -35,98 +35,64 @@
 		</div ><!-- end footer -->
 	</header><!-- end header -->
 
-					<img src="img/work1.jpg" class="media" alt=""/>
+					<img src="img/work1.jpg" />
 				<div class="caption">
 					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work2.jpg" class="media" alt=""/>
+				<img src="img/work2.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
+					</div>
+				</div>
+			</a>
+		</div>
+				<img src="img/work3.jpg"/>
+				<div class="caption">
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work3.jpg" class="media" alt=""/>
+				<img src="img/work4.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work4.jpg" class="media" alt=""/>
+				<img src="img/work5.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work5.jpg" class="media" alt=""/>
+				<img src="img/work6.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work6.jpg" class="media" alt=""/>
+				<img src="img/work2.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work2.jpg" class="media" alt=""/>
+				<img src="img/work3.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
 		</div>
 
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work3.jpg" class="media" alt=""/>
+				<img src="img/work1.jpg"/>
 				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
-					</div>
-				</div>
-			</a>
-		</div>
-
-		<div class="work">
-			<a href="inner.html">
-				<img src="img/work1.jpg" class="media" alt=""/>
-				<div class="caption">
-					<div class="work_title">
-						<h1>culpa qui officia deserunt mollit</h1>
 					</div>
 				</div>
 			</a>
