--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>全民飞机大战</title>
+    <title>全民打飞机</title>
     <meta name="viewport"
           content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no,target-densitydpi=device-dpi"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -72,8 +72,8 @@ function submit_score(e){
 
 <script  type="text/JavaScript">
 window.shareData={
-  'title':'全民飞机大战',
-  'link':'http://www.mycodes.net',
+  'title':'全民打飞机',
+  'link':'http://alanwalkman.sxl.cn',
   'imgurl':'icon.png'
 }
 window.shareFriendData={
