--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 </head>
 <body oncontextmenu="return false">
 
-
 <div style="position:relative;" id="gameDiv"></div>
 <script>var document_class = "Main";</script><!--这部分内容在编译时会被替换，要修改文档类，请到工程目录下的egretProperties.json内编辑。-->
 <script src="launcher/egret_require.js"></script>
@@ -73,15 +72,10 @@ function submit_score(e){
 <script  type="text/JavaScript">
 window.shareData={
   'title':'全民打飞机',
-  'link':'http://alanwalkman.sxl.cn',
+  'link':'hatsune.top',
   'imgurl':'icon.png'
 }
-window.shareFriendData={
-  'title':'全民飞机大战',
-  'content':'更多好玩的游戏等着你。',
-  'link':'http://www.mycodes.net',
-  'imgurl':'icon.png'
-}
+
 </script>
 
 </body>
